--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script>
       window.addEventListener("DOMContentLoaded", (e) => {
         const panoImage = document.querySelector(".panaloma");
-        const mainImage = "test1.jpg";
+        const mainImage = "test1.jpeg";
 
         const panorama = new PANOLENS.ImagePanorama(mainImage);
         const viewer = new PANOLENS.Viewer({
